--- a/public/css/scss/style.scss
+++ b/public/css/scss/style.scss
@@ -40,6 +40,16 @@ body{
     flex-wrap: nowrap;
     justify-content: space-between;
 }
+@media (max-width:767px) {
+    @for $i from 1 through 12{
+        .col-#{$i}{
+            --num: calc(12 / #{$i});
+            width: calc(100% /  var(--num) - 30px);
+            margin: 0px 15px 40px 15px;
+        // 上右下左
+        }
+    }
+}
 //===============================================================
 //=================頁首==========================================
 //================================================================
@@ -57,7 +67,7 @@ header>.container>.row-display-nowrap>nav>ul{
     justify-content: space-around;
 
 }
-header>.container>.row-display-nowrap>nav a{
+header>.container>.row-display-nowrap>nav>ul>li>a{
     color:black;
     display: block;
     margin-left: 20px;
@@ -70,6 +80,112 @@ header>.container>.row-display-nowrap>nav a{
 header>.container>.row-display-nowrap>nav li:last-child a{
     border: none;
 }
+header>.container>.row-display-nowrap>nav a:hover{
+    background-color: #2A66AC;
+    color:#fff;
+}
+header>.container>.row-display-nowrap>nav>ul>li{
+    position: relative;
+}
+//超過768px以上執行-start
+@media (min-width:768px) {
+    header>.container>.row-display-nowrap>nav>ul>li>.submenu{
+        position: absolute;
+        background-color: #FFF;
+        width: 100%;
+        left: 0px;
+        top:28px;
+        display: none;
+    }
+    header>.container>.row-display-nowrap>nav>ul>li:hover .submenu{
+        display: block;
+    }
+    header>.container>.row-display-nowrap>nav>ul>li>.submenu>li{
+        line-height: 30px;
+        text-align: center;
+        border-bottom: 1px solid #2A66AC;
+    }
+    header>.container>.row-display-nowrap>nav>ul>li>.submenu>li>a{
+        display: block;
+        padding: 5px;
+        color: #000;
+    }
+    header>.container>.row-display-nowrap>nav>ul>li>.submenu>li>a:hover{
+        background-color: #2A66AC;
+        color:#fff;
+    }
+    // icon-menu
+    .icon-menu{
+        display: none;
+    }
+}//超過768px以上執行-end
+// 767px以下執行-statr
+@media(max-width:767px) {
+    .container{
+        width: 100%;
+    }
+    .icon-menu{
+        width: 15%;
+        display: block;
+        background-color: #CDF4FF;
+        color: #000;
+        line-height: 125px;
+        text-align: center;
+    }
+    .icon-menu.active nav{
+        display: block;
+    }
+    header{
+        position: relative;
+    }
+    .row-display-nowrap{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    header>.container>.row-display-nowrap>nav{
+        width: 100%;
+        position: absolute;
+        display: none;
+        top: 125px;
+        background-color: #CDF4FF;
+        padding: 0;
+        margin: 0;
+    }
+    header>.container>.row-display-nowrap>nav.active{
+        display: block;
+    }
+    nav{
+        left: 0px;
+    }
+    header>.container>.row-display-nowrap>nav>ul{
+        display: block;
+    }
+    header>.container>.row-display-nowrap>nav>ul>li{
+        width: 100%;
+        border-bottom: 1px solid #2A66AC;
+        text-align: center;
+        padding: 8px;
+    }
+    header>.container>.row-display-nowrap>nav>ul>li>a{
+        display: block;
+        border-right: none;
+    }
+    header>.container>.row-display-nowrap>nav>ul>li>.submenu{
+        background-color: #CDF4FF;
+        display: none;
+    }
+    header>.container>.row-display-nowrap>nav>ul>li>.submenu.active{
+        display: block;
+    }
+    header>.container>.row-display-nowrap>nav>ul>li>.submenu>li{
+        line-height: 40px;
+    }
+    header>.container>.row-display-nowrap>nav>ul>li>.submenu>li>a{
+        color: #000;
+        display: block;
+    }
+}//767px以下執行-end
 //===============================================================================
 //=====================================大圖======================================
 //================================================================================
@@ -82,10 +198,10 @@ header>.container>.row-display-nowrap>nav li:last-child a{
 //=====================================================================================
 .S1{
     background-color: #CDF4FF;
-    height: 350px;
 }
 .S1>.container{
     position: relative;
+    padding-bottom: 100px;
 }
 .S1>.container>h2{
     padding-top: 50px;
@@ -105,8 +221,6 @@ header>.container>.row-display-nowrap>nav li:last-child a{
 }
 .newspost>li>.date{
     float:left;
-    padding-right: 70px;
-    padding-left: 100px;
 }
 .newspost>li>.product1{
     float:left;
@@ -127,10 +241,56 @@ header>.container>.row-display-nowrap>nav li:last-child a{
 .S1>.container>.logo2{
     position: absolute;
     right: 0px;
-    bottom: -200px;
+    bottom: -100px;
     opacity: 0.5;
     width: 20%;
 }
+//768px以上執行-start
+@media (min-width:768px) {
+    .newspost>li>.date{
+        padding-left: 100px;
+        padding-right: 70px;
+    }
+}//768px以上執行-end
+// 767px以下執行-statr
+@media(max-width:767px) {
+    .logo2{
+        display: none;
+    }
+    .S1>.container>h2{
+        padding: 0;
+        padding-top:20px ;
+        padding-left: 30px;
+    }
+    .S1>.container>.newspost{
+        padding-top: 20px;
+    }
+    .S1>.container>.newspost>li{
+        margin: 0;
+        margin-left: 50px;
+        margin-bottom: 10px;
+    }
+    .S1>.container>.newspost>li>.date{
+        float: left;
+        padding-right: 50px;
+        width: 40%;
+    }
+    .S1>.container>.newspost>li>.product1{
+        margin-bottom: 5px;
+        float: left;
+        width: 40%;
+        text-align: center;
+    }
+    .S1>.container>.newspost>li>.product2{
+        margin-bottom: 5px;
+        float: left;
+        width: 40%;
+        text-align: center;
+    }
+    .S1>.container>.newspost>li>.news{
+        margin-left: 20px;
+    }
+}// 767px以下執行-end
 //========================================================================================
 //====================================主打商品=============================================
 //=========================================================================================
@@ -139,60 +299,85 @@ header>.container>.row-display-nowrap>nav li:last-child a{
     padding-top: 20px;
     padding-bottom: 20px;
 }
-.S2>.container>.left{
-    width: 50%;
-    position: relative;
-}
-.S2>.container>.left>img{
-    padding-left: 10px;
-    padding-top: 20px;
-    max-width: 400px;
-}
-.S2>.container>.right{
-    width: 50%;
-}
-.S2>.container>.right>h2{
-    padding-top: 70px;
-    padding-bottom: 30px;
-    padding-left: 50px;
-}
-.S2>.container>.right>p{
-    padding-left: 50px;
-    font-weight: 800;
-}
 .S3{
     background-color: #CDF4FF;
     padding-top: 20px;
 }
-.S3>.container>.left{
-    width: 50%;
-    position: relative;
-}
-.S3>.container>.left>img{
-    padding-left: 50px;
-    padding-top: 20px;
-    max-width: 300px;
-}
-.S3>.container>.right{
-    width: 50%;
-    order: -1;
-}
-.S3>.container>.right>h2{
-    padding-left: 150px;
-    padding-top: 40px;
-    padding-bottom: 20px;
-}
-.S3>.container>.right>p{
-    padding-left: 150px;
-    font-weight: 800;
-}
-.S3>.container>.left>.logo2{
-    position: absolute;
-    right: 0px;
-    bottom: -80px;
-    opacity: 0.5;
-    width: 50%;
-}
+//超過768px以上執行-start
+@media (min-width:768px){
+    .order-md-1{
+        order: -1;
+    }
+    .S2>.container>.left{
+        width: 50%;
+    }
+    .S2>.container>.right{
+        width: 50%;
+    }
+    .S2>.container>.right>h2{
+        padding-top: 70px;
+        padding-bottom: 30px;
+        padding-left: 50px;
+    }
+    .S2>.container>.right>p{
+        padding-left: 50px;
+        font-weight: 800;
+    }
+    .S2>.container>.left>img{
+        padding-left: 10px;
+        padding-top: 20px;
+        max-width: 400px;
+    }
+    .S3>.container>.left{
+        width: 50%;
+        padding-left: 50px;
+        padding-top: 20px;
+        position: relative;
+    }
+    .S3>.container>.right{
+        width: 50%;
+    }
+    .S3>.container>.left>img{
+        max-width: 300px;
+    }
+    .S3>.container>.right>h2{
+        padding-left: 150px;
+        padding-top: 40px;
+        padding-bottom: 20px;
+    }
+    .S3>.container>.right>p{
+        padding-left: 150px;
+        font-weight: 800;
+    }
+    .S3>.container>.left>.logo2{
+        position: absolute;
+        right: 0px;
+        bottom: -80px;
+        opacity: 0.5;
+        width: 50%;
+    }
+}//超過768px以上執行-end
+//767px以下執行-statr
+@media (max-width:767px){
+    .S2>.container>.col-12>img{
+        width: 100%;
+    }
+    .S2>.container>.right>h2{
+        text-align:center;
+    }
+    .S2>.container>.right>p{
+        text-align: center;
+    }
+    .S3>.container>.col-12>img{
+        width: 100%;
+    }
+    .S3>.container>.col-12>h2{
+        text-align: center;
+    }
+    .S3>.container>.col-12>p{
+        text-align: center;
+    }
+}//767px以下執行-end
 //================================================================================================
 //===============================頁尾=============================================================
 //================================================================================================
@@ -200,14 +385,10 @@ footer{
     background-color: #2A66AC;
     padding: 40px 40px 0 40px;
 }
-footer>.container>.row{
-    width: 60%; 
-}
 footer>.container>p{
     text-align: center;
 }
 footer>.container>.row>.floor1{
-    width: 50%;
     padding-bottom: 20px;
 }
 footer>.container>.row>.floor1>img{
@@ -216,7 +397,6 @@ footer>.container>.row>.floor1>img{
     padding-right: 25px;
 }
 footer>.container>.row>.floor2{
-    width: 50%;
     padding-bottom: 20px;
 }
 footer>.container>.row>.floor2>img{
@@ -227,3 +407,22 @@ footer>.container>.row>.floor2>img{
 footer>.container>.row>div>p{
     color: #fff;
 }
+//超過768px以上執行-start
+@media (min-width:768px){
+    footer>.container>.row{
+        width: 60%; 
+    }
+    footer>.container>.row>.floor1{
+        width: 50%;
+    }
+    footer>.container>.row>.floor2{
+        width: 50%;
+    }
+}//超過768px以上執行-end
+//767px以下執行-statr
+@media (max-width:767px){
+    footer>.container>.row>div>p{
+        display: block;
+        float: left;
+    }
+}//767px以下執行-end
