--- a/public/css/scss/style.scss
+++ b/public/css/scss/style.scss
@@ -70,7 +70,7 @@ header>.container>.row-display-nowrap>nav>ul{
 header>.container>.row-display-nowrap>nav>ul>li>a{
     color:black;
     display: block;
-    margin-left: 20px;
+    padding-left: 20px;
     padding-right: 20px;
     font-size: 1.3em;
     text-align: center;
@@ -81,7 +81,7 @@ header>.container>.row-display-nowrap>nav li:last-child a{
     border: none;
 }
 header>.container>.row-display-nowrap>nav a:hover{
-    background-color: #2A66AC;
+    background-color: #22283a;
     color:#fff;
 }
 header>.container>.row-display-nowrap>nav>ul>li{
@@ -103,7 +103,7 @@ header>.container>.row-display-nowrap>nav>ul>li{
     header>.container>.row-display-nowrap>nav>ul>li>.submenu>li{
         line-height: 30px;
         text-align: center;
-        border-bottom: 1px solid #2A66AC;
+        border-bottom: 1px solid #22283a;
     }
     header>.container>.row-display-nowrap>nav>ul>li>.submenu>li>a{
         display: block;
@@ -111,7 +111,7 @@ header>.container>.row-display-nowrap>nav>ul>li{
         color: #000;
     }
     header>.container>.row-display-nowrap>nav>ul>li>.submenu>li>a:hover{
-        background-color: #2A66AC;
+        background-color: #22283a;
         color:#fff;
     }
     // icon-menu
@@ -184,6 +184,9 @@ header>.container>.row-display-nowrap>nav>ul>li{
     header>.container>.row-display-nowrap>nav>ul>li>.submenu>li>a{
         color: #000;
         display: block;
+    }
+    header>.container>.row-display-nowrap>nav>ul>li>.submenu>li>a:hover{
+        color: #FFF;
     }
 }//767px以下執行-end
 //===============================================================================
