--- a/public/css/style.css
+++ b/public/css/style.css
@@ -371,7 +371,7 @@ header > .container > .row-display-nowrap > nav > ul > li {
 
   .S1 > .container > .newspost > li > .date {
     float: left;
-    padding-right: 50px;
+    padding-right: 40px;
     width: 40%;
   }
 
@@ -390,7 +390,7 @@ header > .container > .row-display-nowrap > nav > ul > li {
   }
 
   .S1 > .container > .newspost > li > .news {
-    margin-left: 20px;
+    margin-left: 200px;
   }
 }
 .S2 {
@@ -543,5 +543,10 @@ footer > .container > .row > div > p {
   footer > .container > .row > div > p {
     display: block;
     float: left;
+  }
+
+  footer > .container > .row > .floor2 > .icon-mail {
+    padding: 0;
+    padding-left: 50px;
   }
 }
