--- a/pug/index.pug
+++ b/pug/index.pug
@@ -75,8 +75,8 @@ head
                 div.floor1    
                     img(src="public/images/icon-tfx.png", alt="")
                     p (04)7321101
-                div.floor2              
-                    img(src="public/images/icon-mail.png", alt="")
+                div.floor2           
+                    img.icon-mail(src="public/images/icon-mail.png", alt="")
                     p hongcheng@easywash.com
                 div.floor2
                     img(src="public/images/icon-line.png", alt="")
