--- a/public/css/scss/style.scss
+++ b/public/css/scss/style.scss
@@ -121,11 +121,14 @@ header>.container>.row-display-nowrap>nav>ul>li{
 }//超過768px以上執行-end
 // 767px以下執行-statr
 @media(max-width:767px) {
+    .logo{
+        width: 250px;
+    }
     .container{
         width: 100%;
     }
     .icon-menu{
-        width: 15%;
+        width: 10%;
         display: block;
         background-color: #CDF4FF;
         color: #000;
@@ -157,6 +160,7 @@ header>.container>.row-display-nowrap>nav>ul>li{
     }
     nav{
         left: 0px;
+        z-index: 1;
     }
     header>.container>.row-display-nowrap>nav>ul{
         display: block;
@@ -362,6 +366,9 @@ header>.container>.row-display-nowrap>nav>ul>li{
 }//超過768px以上執行-end
 //767px以下執行-statr
 @media (max-width:767px){
+    .logo2{
+        display: none;
+    }
     .S2>.container>.col-12>img{
         width: 100%;
     }
@@ -372,7 +379,8 @@ header>.container>.row-display-nowrap>nav>ul>li{
         text-align: center;
     }
     .S3>.container>.col-12>img{
-        width: 100%;
+        width: 80%;
+        padding-left: 50px;
     }
     .S3>.container>.col-12>h2{
         text-align: center;
