--- a/public/css/scss/style.scss
+++ b/public/css/scss/style.scss
@@ -58,10 +58,6 @@ body{
     width:250px;
     padding-top: 10px;
 }
-header>.container>.row-display-nowrap>nav{
-    padding-left: 100px;
-    padding-top: 90px;
-}
 header>.container>.row-display-nowrap>nav>ul{
     display: flex;
     justify-content: space-around;
@@ -89,6 +85,10 @@ header>.container>.row-display-nowrap>nav>ul>li{
 }
 //超過768px以上執行-start
 @media (min-width:768px) {
+    header>.container>.row-display-nowrap>nav{
+        padding-left: 100px;
+        padding-top: 90px;
+    }
     header>.container>.row-display-nowrap>nav>ul>li>.submenu{
         position: absolute;
         background-color: #FFF;
@@ -121,19 +121,14 @@ header>.container>.row-display-nowrap>nav>ul>li{
 }//超過768px以上執行-end
 // 767px以下執行-statr
 @media(max-width:767px) {
-    .logo{
-        width: 250px;
-    }
     .container{
         width: 100%;
     }
     .icon-menu{
-        width: 10%;
         display: block;
-        background-color: #CDF4FF;
         color: #000;
-        line-height: 125px;
         text-align: center;
+        padding-top: 10px;
     }
     .icon-menu.active nav{
         display: block;
@@ -151,7 +146,7 @@ header>.container>.row-display-nowrap>nav>ul>li{
         position: absolute;
         display: none;
         top: 125px;
-        background-color: #CDF4FF;
+        background-color: #ccf4ff;
         padding: 0;
         margin: 0;
     }
