--- a/pug/index.pug
+++ b/pug/index.pug
@@ -11,7 +11,8 @@ head
             .row-display-nowrap
                 a(href="index.html" )
                     img.logo.img-fluid(src="public/images/LOGO3.png", alt="") 
-                a#btn-nav-switch.icon-menu(href="javascript:;") menu
+                a#btn-nav-switch.icon-menu(href="javascript:;")
+                    img(src="public/images/menu.svg", alt="")
                 nav 
                     ul 
                         li
