--- a/public/css/scss/style.scss
+++ b/public/css/scss/style.scss
@@ -125,10 +125,11 @@ header>.container>.row-display-nowrap>nav>ul>li{
         width: 100%;
     }
     .icon-menu{
+        width: 90px;
         display: block;
         color: #000;
         text-align: center;
-        padding-top: 10px;
+        padding-top: 20px;
     }
     .icon-menu.active nav{
         display: block;
