--- a/public/css/scss/style.scss
+++ b/public/css/scss/style.scss
@@ -129,13 +129,14 @@ header>.container>.row-display-nowrap>nav>ul>li{
         display: block;
         color: #000;
         text-align: center;
-        padding-top: 40px;
+        margin-top: 40px;
     }
     .icon-menu.active nav{
         display: block;
     }
     header{
         position: relative;
+        padding-bottom: 10px;
     }
     .row-display-nowrap{
         display: flex;
@@ -196,6 +197,12 @@ header>.container>.row-display-nowrap>nav>ul>li{
     text-align:center;
     margin-top: 20px;
 }
+// 767px以下執行-statr
+@media(max-width:767px) {
+    .banner{
+        display: none;
+    }
+}// 767px以下執行-end
 //==================================================================================
 //====================================最新消息=======================================
 //=====================================================================================
@@ -274,24 +281,23 @@ header>.container>.row-display-nowrap>nav>ul>li{
         margin-bottom: 10px;
     }
     .S1>.container>.newspost>li>.date{
-        float: left;
-        padding-right: 40px;
-        width: 40%;
+        width: 30%;
     }
     .S1>.container>.newspost>li>.product1{
+        margin: 0;
+        margin-left: 80px;
         margin-bottom: 5px;
-        float: left;
         width: 40%;
         text-align: center;
     }
     .S1>.container>.newspost>li>.product2{
+        margin: 0;
+        margin-left: 80px;
         margin-bottom: 5px;
-        float: left;
         width: 40%;
         text-align: center;
     }
     .S1>.container>.newspost>li>.news{
-        margin-left: 200px;
     }
 }// 767px以下執行-end
 //========================================================================================
@@ -394,6 +400,8 @@ footer{
 }
 footer>.container>p{
     text-align: center;
+    margin: 0;
+    padding: 0;
 }
 footer>.container>.row>.floor1{
     padding-bottom: 20px;
@@ -437,3 +445,26 @@ footer>.container>.row>div>p{
         padding-left: 50px;
     }
 }//767px以下執行-end
+
+//============================================================
+//===================關於我們==================================
+//============================================================
+section{
+    background-image: url('public/images/seamlessbg.png');
+    background-repeat: repeat;
+    z-index: -999;
+}
+.breadcrumb{
+    padding-top: 20px;
+    padding-bottom:20px ;
+    padding-left: 100px;
+}
+.breadcrumb>a{
+    color: #000;
+}
+.breadcrumb>a:hover{
+    color: #2A66AC;
+}
+section>.about1{
+    padding-left: 200px;
+}
