--- a/pug/about_us.pug
+++ b/pug/about_us.pug
@@ -28,45 +28,14 @@ head
                             a(href="#") 客戶回饋
                         li
                             a(href="#") 常見問題
-    .banner 
-        img.img-fluid(src="public/images/product7.png", alt="")
-    .S1
-        .container
-            h2 最新消息
-            ul.newspost 
-                li 
-                    .date 2022-06-10
-                    .product1 產品資訊
-                    .news 裝修好幫手-壓力板手即將推出,各位師傅們不要錯過喔!
-                li 
-                    .date 2022-05-23
-                    .product2 系統公告
-                    .news 6/1網站將進行維護,不便之處敬請見諒
-                li 
-                    .date 2022-05-10
-                    .product1 產品資訊
-                    .news 四方吹清洗槽即將上市,請各位多多關注官方資訊!
-            img.logo2(src="public/images/LOGO2.png", alt="")
-    .S2   
-        .container.row
-            .left.col-12
-                img.img-fluid(src="public/images/product6.png", alt="") 
-            .right.col-12
-                h2 真豪洗冷氣清洗槽
-                p 革命性產品
-                p 完全解決溢水的困擾
-                p 組裝快速省去繁雜工時
-    .S3    
-        .container.row  
-            .left.col-12
-                img.img-fluid(src="public/images/knife2.png", alt="")
-                img.logo2(src="public/images/LOGO2.png", alt="")
-            .right.col-12.order-md-1
-                h2 真豪修邊刀
-                p 方便攜帶
-                p 好操作
-                p 耐用
-                p 刀頭更換快速
+    section.container
+        .breadcrumb 
+                a(href="index.html") 首頁
+                span &nbsp; &gt; &nbsp;
+                a(href='design-list.html') 關於我們 
+        .about1 
+            p 天氣越炎熱，對空調的需求越來越高，就更需要注重空調的清潔！我們致力於推出冷氣空調相關的產品，
+            p 能夠用更輕鬆的方式來保養、清潔冷氣。才能在這炎炎夏日,享受乾淨舒服的冷氣。
     footer 
         .container 
             .row 
