--- a/public/css/style.css
+++ b/public/css/style.css
@@ -531,6 +531,10 @@ footer > .container > .row > .floor2 > img {
   padding-right: 25px;
 }
 
+footer > .container > .row > .line > img {
+  padding-left: 52px;
+}
+
 footer > .container > .row > div > p {
   color: #fff;
 }
@@ -560,15 +564,15 @@ footer > .container > .row > div > p {
   }
 }
 section {
-  background-image: url("public/images/seamlessbg.png");
+  background-size: 100%;
+  background: url("/public/images/seamless.png");
   background-repeat: repeat;
   z-index: -999;
 }
 
 .breadcrumb {
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left: 100px;
+  margin-top: 20px;
+  padding: 20px 0 20px 100px;
 }
 
 .breadcrumb > a {
@@ -581,4 +585,9 @@ section {
 
 section > .about1 {
   padding-left: 200px;
+}
+
+section > .about1 > p {
+  margin-bottom: 0;
+  padding-bottom: 20px;
 }
