--- a/pug/about_us.pug
+++ b/pug/about_us.pug
@@ -28,14 +28,18 @@ head
                             a(href="#") 客戶回饋
                         li
                             a(href="#") 常見問題
-    section.container
-        .breadcrumb 
+    section
+        .breadcrumb.container
                 a(href="index.html") 首頁
                 span &nbsp; &gt; &nbsp;
-                a(href='design-list.html') 關於我們 
-        .about1 
-            p 天氣越炎熱，對空調的需求越來越高，就更需要注重空調的清潔！我們致力於推出冷氣空調相關的產品，
-            p 能夠用更輕鬆的方式來保養、清潔冷氣。才能在這炎炎夏日,享受乾淨舒服的冷氣。
+                a(href='about_us.html') 關於我們 
+        .about1.container
+            p 天氣越炎熱，對空調的需求越高，就更需要注重空調的清潔！我們致力於推出冷氣空調相關的產品，
+            p 能夠用更輕鬆的方式來保養、清潔冷氣，才能在這炎炎夏日，享受乾淨舒服的冷氣。而每項產品的零件，
+            p 都是朝著輕巧耐用、組裝簡單的方向來去研發，就是為了讓我們的產品是人人都可以輕鬆上手的好工具！
+            p 所以，選擇真豪洗，就是選擇了最輕鬆、最方便的方式來清潔冷氣，帶給家人最舒適的環境！
+        .about2.container 
+
     footer 
         .container 
             .row 
