--- a/pug/about_us.pug
+++ b/pug/about_us.pug
@@ -28,6 +28,8 @@ head
                             a(href="#") 客戶回饋
                         li
                             a(href="#") 常見問題
+    .banner 
+        img.img-fluid(src="public/images/product7.png", alt="")
     section
         .breadcrumb.container
                 a(href="index.html") 首頁
@@ -38,8 +40,19 @@ head
             p 能夠用更輕鬆的方式來保養、清潔冷氣，才能在這炎炎夏日，享受乾淨舒服的冷氣。而每項產品的零件，
             p 都是朝著輕巧耐用、組裝簡單的方向來去研發，就是為了讓我們的產品是人人都可以輕鬆上手的好工具！
             p 所以，選擇真豪洗，就是選擇了最輕鬆、最方便的方式來清潔冷氣，帶給家人最舒適的環境！
-        .about2.container 
-
+        .about2.container.row 
+            .col-md-4.col-12
+                img(src="public/images/coming-soon.png", alt="")
+            .col-md-4.col-12
+                img(src="public/images/coming-soon.png", alt="")
+            .col-md-4.col-12
+                img(src="public/images/coming-soon.png", alt="")
+            .col-md-4.col-12
+                img(src="public/images/coming-soon.png", alt="")
+            .col-md-4.col-12
+                img(src="public/images/coming-soon.png", alt="")
+            .col-md-4.col-12
+                img(src="public/images/coming-soon.png", alt="")    
     footer 
         .container 
             .row 
