--- a/public/css/style.css
+++ b/public/css/style.css
@@ -638,7 +638,7 @@ footer > .container > .row > div > p {
 }
 section {
   background-size: 100%;
-  background: url("/public/images/seamless.png");
+  background-image: url("/public/images/seamless.png");
   background-repeat: repeat;
   z-index: -999;
 }
