--- a/public/css/scss/style.scss
+++ b/public/css/scss/style.scss
@@ -472,6 +472,7 @@ section{
 }
 .breadcrumb>a{
     color: #000;
+    font-size: 1.2em;
 }
 .breadcrumb>a:hover{
     color: #2A66AC;
@@ -482,4 +483,71 @@ section>.about1{
 section>.about1>p{
     margin-bottom: 0;
     padding-bottom: 20px;
+}
+//超過768px以上執行-start
+@media (min-width:768px){
+    section>.about2>.col-md-4{
+        overflow: hidden;
+        position: relative;
+    }
+    section>.about2>.col-md-4>img{
+        transition: all 1s;
+    }
+    section>.about2>.col-md-4>h3{
+        text-align: center;
+        position: absolute;
+        font-size: 2em;
+        transition: all 2s;
+        opacity: calc(0);
+        z-index: 999;
+    }
+    section>.about2>.col-md-4>.parts1{
+        top: 20%;
+        left: 25%;
+    }
+    section>.about2>.col-md-4>.parts2{
+        top: 20%;
+        left: 25%;
+    }
+    section>.about2>.col-md-4>.parts3{
+        top: 20%;
+        left: 30%;
+    }
+    section>.about2>.col-md-4>.parts4{
+        top: 20%;
+        left: 35%;
+    }
+    section>.about2>.col-md-4>.parts5{
+        top: 20%;
+        left: 35%;
+    }
+    section>.about2>.col-md-4>.parts6{
+        top: 20%;
+        left: 30%;
+    }
+    section>.about2>.col-md-4:hover img{
+        transform: scale(1.2);
+        opacity: calc(0.3);
+    }
+    section>.about2>.col-md-4:hover h3{
+        opacity: calc(1);
+    }
+}
+//767px以下執行-statr
+@media (max-width:767px){
+    .breadcrumb{
+        padding: 20px 0 20px 50px;
+    }
+    section>.about1{
+        padding-left: 50px;
+    }
+    section>.about1>p{
+        padding: 10px;
+    }
+    section>.about1>p>br{
+        display: none;
+    }
+    section>.about2>.col-12{
+        text-align: center;
+    }
 }
