--- a/pug/about_us.pug
+++ b/pug/about_us.pug
@@ -3,6 +3,7 @@ head
   meta(http-equiv='X-UA-Compatible' content='IE=edge')
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
   title EasyWash 
+  link(rel="stylesheet", href="public/js/WOW-master/css/libs/animate.css")
   link(rel='stylesheet' href='public/css/style.css')
 
   body 
@@ -30,29 +31,32 @@ head
                             a(href="#") 常見問題
     .banner 
         img.img-fluid(src="public/images/product7.png", alt="")
-    section
+    section.wow.bounceInLeft
         .breadcrumb.container
                 a(href="index.html") 首頁
                 span &nbsp; &gt; &nbsp;
                 a(href='about_us.html') 關於我們 
         .about1.container
-            p 天氣越炎熱，對空調的需求越高，就更需要注重空調的清潔！我們致力於推出冷氣空調相關的產品，
-            p 能夠用更輕鬆的方式來保養、清潔冷氣，才能在這炎炎夏日，享受乾淨舒服的冷氣。而每項產品的零件，
-            p 都是朝著輕巧耐用、組裝簡單的方向來去研發，就是為了讓我們的產品是人人都可以輕鬆上手的好工具！
-            p 所以，選擇真豪洗，就是選擇了最輕鬆、最方便的方式來清潔冷氣，帶給家人最舒適的環境！
+            p 天氣越炎熱，對空調的需求越高，就更需要注重空調的清潔！我們致力於推出冷氣空調相關的產品，#[br] 能夠用更輕鬆的方式來保養、清潔冷氣，才能在這炎炎夏日，享受乾淨舒服的冷氣。而每項產品的零件，#[br] 都是朝著輕巧耐用、組裝簡單的方向來去研發，就是為了讓我們的產品是人人都可以輕鬆上手的好工具！#[br] 所以，選擇真豪洗，就是選擇了最輕鬆、最方便的方式來清潔冷氣，帶給家人最舒適的環境！
         .about2.container.row 
             .col-md-4.col-12
-                img(src="public/images/coming-soon.png", alt="")
+                img.img-fluid(src="public/images/coming-soon.png", alt="")
+                h3.parts1 ㄇ型主體架
             .col-md-4.col-12
-                img(src="public/images/coming-soon.png", alt="")
+                img.img-fluid(src="public/images/coming-soon.png", alt="")
+                h3.parts2 中層U型架
             .col-md-4.col-12
-                img(src="public/images/coming-soon.png", alt="")
+                img.img-fluid(src="public/images/coming-soon.png", alt="")
+                h3.parts3 調整轉軸
             .col-md-4.col-12
-                img(src="public/images/coming-soon.png", alt="")
+                img.img-fluid(src="public/images/coming-soon.png", alt="")
+                h3.parts4 集水袋
             .col-md-4.col-12
-                img(src="public/images/coming-soon.png", alt="")
+                img.img-fluid(src="public/images/coming-soon.png", alt="")
+                h3.parts5 伸縮管
             .col-md-4.col-12
-                img(src="public/images/coming-soon.png", alt="")    
+                img.img-fluid(src="public/images/coming-soon.png", alt="") 
+                h3.parts6 上擋水板 
     footer 
         .container 
             .row 
@@ -71,4 +75,5 @@ head
             p copyright
 
     script(src="https://code.jquery.com/jquery-3.6.0.min.js",integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=",crossorigin="anonymous")
+    script(src="public/js/WOW-master/dist/wow.min.js")
     script(src="public/js/easywash-script.js")
